[package]
name = "glot-snippets-migration-tool"
version = "0.1.0"
authors = ["Petter Rasmussen <petter@hask.no>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = { version = "0.19.0", features = ["with-chrono-0_4"] }
chrono = "0.4.19"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.61"
serde_bytes = "0.11.5"
ureq = { version = "1.5.4", features = ["json"] }
